# enclustra-fpga-samples

./: README.md
src/ebpf/: .gitignore  README.md
src/ebpf/helloworld/: helloworld.py
src/ebpf/networkpackets/: Makefile  networkpackets.bpf.c
src/ebpf/sysmonitor/: sysmonitor.py
src/sycl/: README.md
src/sycl/arch/intel-oneapi-basekit/: .gitignore  PKGBUILD
src/sycl/fft-demo/sycl-app/: CMakeLists.txt
src/sycl/fft-demo/sycl-app/fft-demo/: CMakeLists.txt  fft.cpp  fft.hpp  main.cpp
src/sycl/sycl-app/: .gitignore  CMakeLists.txt  README.md
src/sycl/sycl-app/fft-demo/: CMakeLists.txt  fft.hpp
src/sycl/sycl-app/matrix-demo/: CMakeLists.txt  main.cpp
src/sycl/sycl-app/vector-demo/: CMakeLists.txt  main.cpp
src/xu5-bsp/: README.md
